# signex

./: .git_commit_msg.txt  .gitattributes  .gitignore  .gitmodules  2026-04-22 23-26-02.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  index.html  package-lock.json  package.json  rust-toolchain.toml
crates/chrome-catalog/: Cargo.toml
crates/chrome-catalog/src/: bom_modal.rs  catalog.rs  icon.rs  main.rs  modal_card.rs  project_tree.rs  section.rs  tabs.rs  theme.rs  theme_picker.rs  theme_pill.rs
crates/signex-3d-model-importer/: Cargo.toml
crates/signex-3d-model-importer/src/: cache.rs  error.rs  lib.rs
crates/signex-3d-model-importer/tests/: import_integration.rs
crates/signex-app/: Cargo.toml  build.rs  signex.manifest
crates/signex-app/examples/: build_stock_library.rs
crates/signex-app/src/: active_bar.rs  app.rs  chrome.rs  config_root.rs  diagnostics.rs  feature_flags.rs  find_replace.rs  first_run_tour.rs  fonts.rs  icons.rs  keyboard_shortcuts_modal.rs  lib.rs  main.rs  menu_bar.rs  pcb_canvas.rs  preferences.rs  render_config.rs  renderer_scene_canvas.rs  scene_shader.rs  schematic_runtime.rs  schematic_shader.rs  shortcuts.rs  status_bar.rs  styles.rs  tab_bar.rs  test_support.rs  toolbar.rs  tree_view.rs  undo.rs
crates/signex-app/tests/: distributor_settings_mouser_flow.rs  export_scope.rs  footprint_pad_remint.rs  footprint_pad_rotation.rs  footprint_pad_sketch_mirror.rs  passive_calculator_tests.rs  regression.rs  shared_config_root.rs  sketch_qfn16_smoke.rs
crates/signex-bake/: Cargo.toml
crates/signex-bake/src/: array.rs  body3d.rs  courtyard.rs  cutout.rs  keepout.rs  lib.rs  mask.rs  pad.rs  pour.rs  profile.rs  silk.rs  vscore.rs
crates/signex-bake/tests/: bake_pads.rs
crates/signex-engine/: Cargo.toml
crates/signex-engine/src/: annotation.rs  command.rs  error.rs  history.rs  lib.rs  patch.rs  selection.rs  sheet.rs  transform.rs
crates/signex-gfx/: Cargo.toml
crates/signex-gfx/src/: camera.rs  color_uniform.rs  context.rs  debug_pass.rs  lib.rs  style.rs
crates/signex-gfx/tests/: regression_golden.rs
crates/signex-library/: Cargo.toml  build.rs
crates/signex-library-server/: Cargo.toml
crates/signex-library-server/migrations/: 0001_initial.sql  0005_tabular_components.sql  004_primitives.sql
crates/signex-library-server/src/: git_export.rs  lib.rs  locks.rs  main.rs
crates/signex-library-server/tests/: health.rs  integration_db.rs  primitives.rs
crates/signex-library/src/: adapter.rs  ai_stub.rs  cascade.rs  component.rs  diff.rs  distributor.rs  embed.rs  hash.rs  identity.rs  lib.rs  library_file.rs  lifecycle.rs  manifest.rs  manufacturer.rs  param.rs  search.rs  search_index.rs  snxpart.rs  tables.rs  templates.rs  where_used.rs
crates/signex-library/templates-builtin/: capacitor.toml  generic.toml  inductor.toml  opamp.toml  resistor.toml
crates/signex-library/tests/: ai_stub.rs  database_adapter.rs  diff_golden.rs  distributor_cache.rs  distributor_digikey.rs  distributor_jlcpcb.rs  distributor_keyring.rs  distributor_lcsc.rs  distributor_mouser.rs  footprint_schema_v3.rs  foundation_round_trip.rs  local_git_adapter.rs  local_git_project_adapter.rs  migration_v1_to_v2.rs  project_file_history.rs  search_index.rs  where_used.rs
crates/signex-output/: Cargo.toml
crates/signex-output/examples/: qa_harness.rs
crates/signex-output/src/: expression.rs  lib.rs  substitution.rs
crates/signex-passive-calculator/: Cargo.toml
crates/signex-passive-calculator/src/: color_code.rs  control.rs  domain.rs  network.rs  solver.rs
crates/signex-passive-calculator/tests/: color_code_tests.rs  control_tests.rs  domain_tests.rs  network_tests.rs  solver_tests.rs
crates/signex-renderer/: Cargo.toml
crates/signex-renderer/data/: builtin_schematic_palette.json
crates/signex-renderer/src/: iced_bridge.rs  lib.rs  pcb.rs  pcb3d.rs  schematic.rs  theme.rs
crates/signex-renderer/tests/: no_literal_colors.rs  pcb3d_benchmark_smoke.rs  pcb3d_runtime_glb_ingest.rs  pcb3d_runtime_model_bridge.rs  pcb_dirty_event_integration.rs  pcb_vertical_slice_golden.rs  pcb_zone_stack_benchmark.rs
crates/signex-sketch/: Cargo.toml  deny.toml
crates/signex-sketch/examples/: bench_linalg.rs
crates/signex-sketch/src/: array.rs  attr.rs  constraint.rs  entity.rs  error.rs  id.rs  lib.rs  parameter.rs  plane.rs  sketch.rs  split.rs  unit.rs
crates/signex-sketch/tests/: canonical_sketches.rs  constraints_basics.rs  constraints_equal_tangent.rs  constraints_parallel_perp_angle.rs  constraints_point_on.rs  constraints_symmetric_midpoint.rs  dof.rs  expr_eval.rs  expr_parser.rs  linalg.rs  lm_basic.rs  round_trip.rs  solver_api.rs  solver_basics.rs  unit_parser.rs
crates/signex-transmission-line-calculator/: Cargo.toml  build.rs
crates/signex-transmission-line-calculator/src/: analysis.rs  chart_geometry.rs  lib.rs  lib_tests.rs  svg.rs  tool.rs  touchstone.rs  url_codec.rs  url_numbers.rs
crates/signex-types/: Cargo.toml
crates/signex-types/docs/: pin-design.md
crates/signex-types/src/: anchor2d.rs  atomic_io.rs  coord.rs  designator.rs  format.rs  layer.rs  lib.rs  library.rs  markup.rs  net.rs  pcb.rs  project.rs  property.rs  rotation2d.rs  schematic.rs  theme.rs
crates/signex-widgets/: Cargo.toml
crates/signex-widgets/src/: active_bar.rs  active_bar_dropdown.rs  history_pane.rs  icon_button.rs  lib.rs  status_bar.rs  symbol_preview.rs  tab_pill.rs  theme_ext.rs  tree_view.rs
crates/signex-widgets/tests/: color_code_tests.rs  control_tests.rs  domain_tests.rs  network_tests.rs  passive_calculator.rs  solver_tests.rs
crates/standard-parser/: Cargo.toml
crates/standard-parser/src/: lib.rs  pcb.rs  schematic.rs  sexpr.rs  symbol_lib.rs
crates/standard-writer/: Cargo.toml
crates/standard-writer/src/: lib.rs  pcb.rs  schematic.rs  sexpr_render.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  library.rs  mod.rs  pcb.rs  project.rs  save.rs  schematic.rs  signal.rs  simulation.rs
(+1205 files in other folders)
