[workspace]
resolver = "2"
members = [
    "crates/signex-app",
    "crates/signex-engine",
    "crates/signex-bom",
    "crates/signex-types",
    "crates/kicad-parser",
    "crates/kicad-writer",
    "crates/signex-render",
    "crates/signex-widgets",
    "crates/signex-erc",
    "crates/signex-erc-dsl",
    "crates/signex-output",
    "crates/chrome-catalog",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/alplabai/signex"

[workspace.dependencies]
# UI framework
iced = { version = "0.14", features = ["wgpu", "canvas", "advanced", "svg", "image", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = [
    "tabs", "tab_bar", "card", "context_menu", "number_input",
    "color_picker", "menu", "drop_down", "selection_list",
    "wrap", "spinner", "sidebar", "labeled_frame", "badge",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identity
uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# File dialogs
rfd = "0.17.2"

# DSL parser
chumsky = "0.12"
regex = "1"

# Output generation
pdf-writer = "0.14"
rust_xlsxwriter = "0.77"
tiny-skia = "0.11"
ttf-parser = "0.25"

# Internal crates
signex-types = { path = "crates/signex-types" }
signex-engine = { path = "crates/signex-engine" }
signex-bom = { path = "crates/signex-bom" }
kicad-parser = { path = "crates/kicad-parser" }
kicad-writer = { path = "crates/kicad-writer" }
signex-render = { path = "crates/signex-render" }
signex-widgets = { path = "crates/signex-widgets" }
signex-erc = { path = "crates/signex-erc" }
signex-erc-dsl = { path = "crates/signex-erc-dsl" }
signex-output = { path = "crates/signex-output" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
