[workspace]
resolver = "2"
members = [
    "crates/signex-app",
    "crates/signex-engine",
    "crates/signex-bom",
    "crates/signex-types",
    "crates/signex-gfx",
    "crates/signex-renderer",
    "crates/signex-widgets",
    "crates/signex-erc",
    "crates/signex-erc-dsl",
    "crates/signex-output",
    "crates/chrome-catalog",
    "crates/signex-library",
    "crates/signex-library-server",
    "crates/signex-sketch",
    "crates/signex-bake",
    "crates/signex-3d-model-importer",
]

[workspace.package]
version = "0.13.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/alplabai/signex"

[workspace.dependencies]
# UI framework
iced = { version = "0.14", features = ["wgpu", "canvas", "advanced", "svg", "image", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = [
    "tabs", "tab_bar", "card", "context_menu", "number_input",
    "color_picker", "menu", "drop_down", "selection_list",
    "wrap", "spinner", "sidebar", "labeled_frame", "badge",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Identity
uuid = { version = "1.23.1", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# File dialogs
rfd = "0.17.2"

# DSL parser
chumsky = "0.12"
regex = "1"

# Output generation
pdf-writer = "0.14"
rust_xlsxwriter = "0.77"
tiny-skia = "0.11"
ttf-parser = "0.25"

# Internal crates
signex-types = { path = "crates/signex-types" }
signex-engine = { path = "crates/signex-engine" }
signex-bom = { path = "crates/signex-bom" }
signex-gfx = { path = "crates/signex-gfx" }
signex-renderer = { path = "crates/signex-renderer" }
signex-widgets = { path = "crates/signex-widgets" }
signex-erc = { path = "crates/signex-erc" }
signex-erc-dsl = { path = "crates/signex-erc-dsl" }
signex-output = { path = "crates/signex-output" }
signex-3d-model-importer = { path = "crates/signex-3d-model-importer" }

# Library subsystem (v0.9 plan, restored at v0.11)
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Library subsystem — Phase 1 (adapters: local-git, database server, distributor APIs, search, AI-stub)
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
keyring = "3"
tantivy = "0.22"
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono", "uuid", "migrate"] }
pdf-extract = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace", "auth", "validate-request", "limit"] }
# Per-IP rate limiting for the library server (HI-2). Closes the DoS surface
# on `/locks` (unbounded acquire) + mutating routes. `governor` is the
# underlying token-bucket impl.
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal — library
signex-library = { path = "crates/signex-library" }

# Internal — sketcher (v0.13)
signex-sketch = { path = "crates/signex-sketch" }

# Internal — bake pipeline (v0.13 Phase 7)
signex-bake = { path = "crates/signex-bake" }

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
lto = false
debug = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
