[package]
name = "alp-eda"
version = "0.1.0"
description = "AI-First Electronic Design Automation"
authors = ["Caner Alp <caner.alp@alplab.ai>"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "alp_eda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-dialog removed — freezes WebView on Windows, using rfd directly
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }

