[package]
name = "chrome-catalog"
description = "Visual sandbox for Signex chrome — tabs, panels, modals, buttons in every state. Used during UI iteration so we don't have to launch the full app to see whether a tab style is right."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
signex-types = { path = "../signex-types" }
signex-widgets = { path = "../signex-widgets" }
signex-passive-calculator = { path = "../signex-passive-calculator" }

[[bin]]
name = "chrome-catalog"
path = "src/main.rs"
