[package]
name = "signex-3d-model-importer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "STEP / VRML / GLTF → GLB conversion pipeline for signex-renderer"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
