[package]
name = "signex-app"
description = "Signex EDA — main application binary (Iced 0.14 + wgpu)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "signex"
path = "src/main.rs"

[dependencies]
signex-types = { workspace = true }
signex-engine = { workspace = true }
standard-parser = { workspace = true }
standard-writer = { workspace = true }
signex-render = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
num-traits = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
signex-widgets = { workspace = true }
signex-erc = { workspace = true }
signex-erc-dsl = { workspace = true }
signex-output = { workspace = true }
signex-library = { workspace = true, features = [
    "local-git",
    "database",
    "distributors-community",
    "ai-stub",
    "search-tantivy",
] }
tracing = { workspace = true }
chrono = { workspace = true }
rfd = { workspace = true }
sha2 = { workspace = true }
fontdb = "0.23"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
# UI-WS7 — Distributor APIs flows
# `webbrowser` opens the DigiKey OAuth2 authorization URL in the user's
# default browser; `tiny_http` runs the one-shot localhost callback
# server that catches the OAuth redirect; `dirs` finds the OS config
# directory for `distributors.toml` persistence; `toml` (de)serialises
# the order-of-preference list. `tokio` is already a transitive dep
# (iced) but we use the multi-thread runtime explicitly for the OAuth
# exchange + Mouser test flow on a worker thread.
webbrowser = "1"
tiny_http = "0.12"
dirs = "5"
toml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Used by `library::editor::symbol` integration tests to build a
# synthetic LM317-style datasheet PDF without checking a binary into
# the repo.
pdf-writer = { workspace = true }
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
# DwmSetWindowAttribute for DWMWA_WINDOW_CORNER_PREFERENCE — used by
# `src/chrome.rs` to restore Windows 11 rounded corners on the borderless
# main window (which loses them when `decorations: false` strips the
# WS_THICKFRAME DWM relies on). 0.61 aligns with what winit already pulls
# so there's no extra copy in the dep graph.
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
