[package]
name = "signex-app"
description = "Signex EDA — main application binary (Iced 0.14 + wgpu)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "signex_app"
path = "src/lib.rs"

[[bin]]
name = "signex"
path = "src/main.rs"

[dependencies]
signex-types = { workspace = true }
signex-engine = { workspace = true }
signex-renderer = { workspace = true }
signex-gfx = { workspace = true }
iced = { workspace = true }
iced_aw = { workspace = true }
num-traits = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
signex-widgets = { workspace = true }
signex-erc = { workspace = true }
signex-erc-dsl = { workspace = true }
signex-net = { workspace = true }
signex-output = { workspace = true }
signex-library = { workspace = true, features = [
    "local-git",
    "database",
    "distributors-community",
    "ai-stub",
    "search-tantivy",
] }
signex-sketch = { workspace = true }
signex-bake = { workspace = true }
# `log` feature: signex-app installs a `log`-based logger (SignexLogger) but
# no tracing subscriber, and several crates (notably signex-library) report
# non-fatal errors via tracing::warn!. Without this feature those records
# only reached the log on Linux, via a Wayland-only transitive that happened
# to enable tracing's log bridge. Enabling it here makes library warnings
# reach the diagnostics panel on every platform.
tracing = { workspace = true, features = ["log"] }
chrono = { workspace = true }
rfd = { workspace = true }
sha2 = { workspace = true }
fontdb = "0.23"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
# UI-WS7 — Distributor APIs flows
# `webbrowser` opens the DigiKey OAuth2 authorization URL in the user's
# default browser; `tiny_http` runs the one-shot localhost callback
# server that catches the OAuth redirect; `dirs` finds the OS config
# directory for `distributors.toml` persistence; `toml` (de)serialises
# the order-of-preference list. `tokio` is already a transitive dep
# (iced) but we use the multi-thread runtime explicitly for the OAuth
# exchange + Mouser test flow on a worker thread.
webbrowser = "1"
tiny_http = "0.12"
dirs = "5"
toml = { workspace = true }
tokio = { workspace = true }

[features]
# Redirects `fonts::prefs_path()` to a per-process tempdir instead of the
# real OS config file, and skips the legacy-prefs migration. Activated for
# signex-app's own integration-test binaries below via a self-referential
# dev-dependency — the same pattern tokio uses for its `test-util` feature
# (a crate depending on itself as a dev-dependency to get test-only cfg
# gating in code paths that regular `cargo build`/`cargo run` never see).
# The workspace's `resolver = "2"` keeps this feature from leaking into
# non-test builds of the `signex` binary. See issue #437.
test-prefs-redirect = []

[dev-dependencies]
signex-app = { path = ".", features = ["test-prefs-redirect"] }
tempfile = "3"
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
# DwmSetWindowAttribute for DWMWA_WINDOW_CORNER_PREFERENCE — used by
# `src/chrome.rs` to restore Windows 11 rounded corners on the borderless
# main window (which loses them when `decorations: false` strips the
# WS_THICKFRAME DWM relies on). 0.61 aligns with what winit already pulls
# so there's no extra copy in the dep graph.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    # ReleaseCapture + SendMessageW + WM_SYSCOMMAND constants for the
    # SC_MOVE / SC_SIZE drag fallback in `src/chrome.rs`. winit's own
    # `drag_window` / `drag_resize_window` defer the `PostMessageW`
    # via a thread executor and the message loses its connection to
    # the user's button-down on borderless windows; sending
    # WM_SYSCOMMAND ourselves bypasses that timing window.
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
