[package]
name = "signex-bake"
description = "Sketch -> footprint primitive bake pipeline (signex-sketch + signex-library)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
signex-sketch = { workspace = true }
signex-library = { workspace = true }
signex-types = { workspace = true }
