[package]
name = "signex-engine"
description = "Editing engine skeleton for Signex EDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
signex-types = { workspace = true }
kicad-parser = { workspace = true }
kicad-writer = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }