[package]
name = "signex-gfx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu = "22"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.9"
rstar = "0.12"
bitflags = "2"

[dev-dependencies]
pollster = "0.4"
