[package]
name = "signex-gfx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu = "=27.0.1"
glam = "0.32.1"
bytemuck = { version = "1", features = ["derive"] }
cryoglyph = "0.1.0"
rstar = "0.12"
bitflags = "2"

[dev-dependencies]
pollster = "0.4"
serde.workspace = true
serde_json.workspace = true
