[package]
name = "signex-library-server"
description = "axum HTTP+WS server for Signex database-flavour libraries (v0.9.2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
signex-library = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Re-import signex-library with the `database` feature so the in-tree integration
# tests can construct a `DatabaseAdapter` against an in-process server.
signex-library = { workspace = true, features = ["database"] }
tokio = { workspace = true }
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
