[package]
name = "signex-library"
description = "Component library subsystem for Signex — data model, adapters, diff, search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { version = "2", features = ["serde"] }
standard-parser = { workspace = true }

# Heuristic AI-stub for symbol pinout extraction (WS-F).
pdf-extract = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# Tantivy search backend (WS-E).
tantivy = { workspace = true, optional = true }

# Local + git adapter (WS-A).
git2 = { workspace = true, optional = true }
walkdir = { version = "2", optional = true }

[features]
default = []
ai-stub = ["dep:pdf-extract", "dep:regex"]
search-tantivy = ["dep:tantivy"]
local-git = ["dep:git2", "dep:walkdir"]

[dev-dependencies]
tempfile = "3"
pdf-writer = { workspace = true }
