[package]
name = "signex-library"
description = "Component library subsystem for Signex — data model, adapters, diff, search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Enables the 4 community distributor adapters (DigiKey/Mouser/LCSC/JLCPCB),
# OS keyring-backed credential storage, and reqwest-based HTTP. See WS-C.
distributors-community = [
    "dep:keyring",
    "dep:oauth2",
    "dep:reqwest",
    "dep:tokio",
    "dep:dirs",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { version = "2", features = ["serde"] }
csv = "1.3"
standard-parser = { workspace = true }

# Heuristic AI-stub for symbol pinout extraction (WS-F).
# Gated behind the `ai-stub` feature so the default build skips the
# pdf-extract / regex compile cost.
pdf-extract = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# Phase 1 WS-E: Tantivy search backend (gated behind `search-tantivy`).
tantivy = { workspace = true, optional = true }

# Local + git adapter (WS-A).
git2 = { workspace = true, optional = true }
walkdir = { version = "2", optional = true }

# Database adapter (WS-B) + community distributor adapters (WS-C) — both use
# the same `reqwest` blocking client. Adding `blocking` to the workspace
# default features (json + rustls-tls).
reqwest = { workspace = true, features = ["blocking"], optional = true }

# Distributor adapters (WS-C).
keyring = { workspace = true, optional = true }
# DigiKey scaffolding uses oauth2's blocking sync HTTP integration.
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls", "reqwest-blocking"], optional = true }
tokio = { workspace = true, optional = true }
dirs = { version = "5", optional = true }

# Logging — used to surface non-fatal errors (cache writes, token rotation,
# mutex poison, etc.) without aborting the call. Light-weight and pure-Rust;
# kept un-feature-gated so every adapter can `tracing::warn!` consistently.
tracing = { workspace = true }

[features]
default = []
# Enables `signex_library::ai_stub` — heuristic pinout extraction from
# datasheet PDFs (no LLM, no network calls). Pulls in `pdf-extract` and
# `regex`. Real LLM-based synthesis is deferred to v3.x per LIBRARY_PLAN.
ai-stub = ["dep:pdf-extract", "dep:regex"]
# Enable the Tantivy-backed `TantivySearchIndex` impl of `SearchIndex`.
search-tantivy = ["dep:tantivy"]

[dev-dependencies]
tempfile = "3"
pdf-writer = { workspace = true }
