[package]
name = "signex-output"
description = "Output generation for Signex EDA — PDF, BOM, netlist, sheet templates, print preview"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
signex-bom = { path = "../signex-bom" }
signex-types = { path = "../signex-types" }
kicad-parser = { path = "../kicad-parser" }
kicad-writer = { path = "../kicad-writer" }
thiserror = { workspace = true }
serde = { workspace = true }
pdf-writer = { workspace = true }
rust_xlsxwriter = { workspace = true }
tiny-skia = { workspace = true }
ttf-parser = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
