[package]
name = "signex-passive-calculator"
description = "Preferred-value passive component network calculator and reusable Iced control"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
iced_aw = { workspace = true }
signex-types = { workspace = true }
