[package]
name = "signex-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
signex-gfx = { workspace = true }
signex-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
