[package]
name = "signex-sketch"
description = "2D parametric sketcher for footprints — entities, constraints, solver, bake"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
