[package]
name = "signex-transmission-line-calculator"
description = "Smith chart domain model, RF network solver, and interactive tool for Signex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
mathjax-svg-rs = "0.4"
