[package]
name = "signex-widgets"
description = "Custom Iced widgets for Signex EDA — tree view, menus, data table, property grid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
signex-types = { workspace = true }
iced = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
rust-rf = { workspace = true }
